// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1 1`] = `
<div
  data-testid="button"
>
  save
</div>
`;

exports[`matches snapshot 2 1`] = `
<div
  data-testid="button"
>
  click test!
</div>
`;
